--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -12,38 +12,79 @@
     <title>{% block title %}Home{% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <button
-        class="collapsed navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-collapse collapse show" id="navbarExample01">
-        <div class="navbar-nav">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" id="login" href="/login">Login</a>
+    <nav class="navbar navbar-dark bg-dark" aria-label="First navbar example">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/home">Test</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarsExample01"
+          aria-controls="navbarsExample01"
+          aria-expanded="true"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div
+          class="navbar-collapse collapse show"
+          id="navbarsExample01"
+          style=""
+        >
+          <ul class="navbar-nav me-auto mb-2">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                id="home"
+                href="/home"
+                >Home</a
+              >
             </li>
-            <li class="nav-item active">
-              <a class="nav-link" id="signUp" href="/sign-up">Sign Up</a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link" id="logout" href="/logout">Logout</a>
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link" id="home" href="/home">Home</a>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+                >Dropdown</a
+              >
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" id="login" href="/login">Login</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" id="signUp" href="/sign-up"
+                    >Sign up</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" id="logout" href="/logout">Logout</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" id="home" href="/home">Home</a>
+                </li>
+              </ul>
             </li>
           </ul>
+          <form role="search">
+            <input
+              class="form-control"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+          </form>
         </div>
       </div>
     </nav>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
