--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -27,11 +27,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div
-          class="navbar-collapse collapse show"
-          id="navbarsExample01"
-          style=""
-        >
+        <div class="navbar-collapse collapse show" id="navbarsExample01">
           <ul class="navbar-nav me-auto mb-2">
             <li class="nav-item">
               <a
